[package]
name = "mev-engine"
version = "0.1.1"
authors = ["RaveenBhasin raveenabhasin15@gmail.com"]
description = "A mev-engine for starknet"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
num-bigint = "0.4.6"
num-traits = "0.2.19"
serde = "1.0.210"
starknet = "0.12.0"
tokio = { version = "1.38", features = ["full"] }
color-eyre = "0.6.3"
tracing = "0.1.40"
thiserror = "1.0.63"
serde_json = "1.0.128"
futures = "0.3.30"
dotenv = "0.15.0"

[lib]
name = "mev_engine"
crate-type = ["lib"]
